[package]
name = "macro_example"
version = "0.1.0"
authors = ["Kevin Stenerson <developer@stenerson.me>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
combine = "3.8.1"
combine-proc-macro = "0.2.0"
crabwise-antlr-parser = { path = "../.." }
quote = "0.6.12"
proc-macro2 = "0.4.29"

[patch.crates-io]
combine-proc-macro = { git = "https://github.com/kestred/combine-proc-macro.git" }